# project-root

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: lib.h
lib/src/: lib.cpp
program1/: CMakeLists.txt  client.cpp
program2/: CMakeLists.txt  server.cpp
